# edge_dection

./: CMakeLists.txt  README.md
canny/: canny.cpp  canny.h
common/: utilities.h
include/: canny.h  laplace.h  prewitt.h  roberts.h  sobel.h
include/common/: utilities.h
laplace/: laplace.cpp  laplace.h
prewitt/: prewitt.cpp  prewitt.h
roberts/: roberts.cpp  roberts.h
sobel/: sobel.cpp  sobel.h
src/: canny.cpp  prewitt.cpp  roberts.cpp  sobel.cpp
src/common/: utilities.cpp
test/: canny_test.cpp  laplace.cpp  prewitt_test.cpp  roberts.cpp  sobel.cpp
